--- a/practice/templates/practapp/index.html
+++ b/practice/templates/practapp/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Django App</title>
-</head>
-<body>
-    <h1>{{ greeting }}</h1>
-    <p>Today is {{ date|date:"F j, Y" }}</p>
-</body>
+
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <div class="container">
+        <div class="jumbotron">
+            <h1>{{ greeting }}</h1>
+            <p>Today is {{ date|date:"F j, Y" }}</p>
+            <h2>Go to /user to sign up!</h2>
+        </div>
+    </div>
+    
+  </body>
 </html>
