--- a/practice/templates/practapp/user.html
+++ b/practice/templates/practapp/user.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>User Data</title>
-</head>
-<body>
-    <h1>Fake User Data</h1>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!-- <h1>Fake User Data</h1>
     {% if user_page %}
     <ol>
-        {% for person in user_page %}
-        <li>User Info</li>
-        <ul>
-            <li>First Name: {{ person.first_name }}</li>
-            <li>last Name: {{ person.last_name }}</li>
-            <li>Email: {{ person.email }}</li>
-        </ul>
-        {% endfor %}
+      {% for person in user_page %}
+      <li>User Info</li>
+      <ul>
+        <li>First Name: {{ person.first_name }}</li>
+        <li>last Name: {{ person.last_name }}</li>
+        <li>Email: {{ person.email }}</li>
+      </ul>
+      {% endfor %}
     </ol>
-    {% endif %}
-</body>
+    {% endif %} -->
+    <div class="container">
+        <h1>Please sign up here!</h1>
+        <form method="POST">
+            {{ form.as_p }}
+            {% csrf_token %}
+            <input type="submit" class="btn btn-primary" value="Submit">
+        </form>
+    </div>
+  </body>
 </html>
